Added buttons id and classes

--- a/index.html
+++ b/index.html
@@ -20,32 +20,32 @@
             </div>
             <div class="buttons-container">
                 <div class="row">
-                    <button class="button">AC</button>
-                    <button class="button">C</button>
-                    <button class="button">%</button>
-                    <button class="button">÷</button>
+                    <button class="button" id="all-clear">AC</button>
+                    <button class="button" id="delete">C</button>
+                    <button class="button operator-btn" id="percent">%</button>
+                    <button class="button operator-btn" id="divide">÷</button>
                 </div>
                 <div class="row">
-                    <button class="button">7</button>
-                    <button class="button">8</button>
-                    <button class="button">9</button>
-                    <button class="button">+</button>
+                    <button class="button number-btn" id="7">7</button>
+                    <button class="button number-btn" id="8">8</button>
+                    <button class="button number-btn" id="9">9</button>
+                    <button class="button operator-btn" id="add">+</button>
                 </div>
                 <div class="row">
-                    <button class="button">4</button>
-                    <button class="button">5</button>
-                    <button class="button">6</button>
-                    <button class="button">-</button>
+                    <button class="button number-btn" id="4">4</button>
+                    <button class="button number-btn" id="5">5</button>
+                    <button class="button number-btn" id="6">6</button>
+                    <button class="button operator-btn" id="subtract">-</button>
                 </div>
                 <div class="row">
-                    <button class="button">1</button>
-                    <button class="button">2</button>
-                    <button class="button">3</button>
-                    <button class="button">×</button>
+                    <button class="button number-btn" id="1">1</button>
+                    <button class="button number-btn" id="2">2</button>
+                    <button class="button number-btn" id="3">3</button> id=""
+                    <button class="button operator-btn" id="multiply">×</button>
                 </div>
                 <div class="row">
-                    <button class="button">.</button>
-                    <button class="button">0</button>
+                    <button class="button" id=".">.</button>
+                    <button class="button number-btn" id="0">0</button>
                     <button class="button" id="equal">=</button>
                 </div>
             </div>
