--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Calculator</title>
     <link rel="stylesheet" href="styles.css">
+    <script defer src="script.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Victor+Mono:ital,wght@0,700;1,400&display=swap" rel="stylesheet">
@@ -11,46 +12,44 @@
     <div class="container">
         <div class="calculator">
             <div class="display">
-                <div class="small-display">
-                    1 + 1 =
-                </div>
+                <div class="small-display">0</div>
                 <div class="big-display">
-                    2
+
                 </div>
             </div>
             <div class="buttons-container">
                 <div class="row">
                     <button class="button" id="all-clear">AC</button>
-                    <button class="button" id="delete">C</button>
-                    <button class="button operator-btn" id="percent">%</button>
-                    <button class="button operator-btn" id="divide">÷</button>
+                    <button class="button" id="delete-btn">C</button>
+                    <button class="button operator-btn" id="%">%</button>
+                    <button class="button operator-btn" id="/">&divide;</button>
                 </div>
                 <div class="row">
                     <button class="button number-btn" id="7">7</button>
                     <button class="button number-btn" id="8">8</button>
                     <button class="button number-btn" id="9">9</button>
-                    <button class="button operator-btn" id="add">+</button>
+                    <button class="button operator-btn" id="+">+</button>
                 </div>
                 <div class="row">
                     <button class="button number-btn" id="4">4</button>
                     <button class="button number-btn" id="5">5</button>
                     <button class="button number-btn" id="6">6</button>
-                    <button class="button operator-btn" id="subtract">-</button>
+                    <button class="button operator-btn" id="-">-</button>
                 </div>
                 <div class="row">
                     <button class="button number-btn" id="1">1</button>
                     <button class="button number-btn" id="2">2</button>
-                    <button class="button number-btn" id="3">3</button> id=""
-                    <button class="button operator-btn" id="multiply">×</button>
+                    <button class="button number-btn" id="3">3</button>
+                    <button class="button operator-btn" id="*">&times;</button>
                 </div>
                 <div class="row">
                     <button class="button" id=".">.</button>
                     <button class="button number-btn" id="0">0</button>
-                    <button class="button" id="equal">=</button>
+                    <button class="button" id="equal-btn">=</button>
                 </div>
             </div>
         </div>
     </div>
-    <footer>OrntSpisc</footer>
+    <footer>OrntSpisc @ Github</footer>
 </body>
 </html>
