--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>Calculator</title>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
     <script defer src="script.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -45,7 +46,7 @@
                 <div class="row">
                     <button class="button" id=".">.</button>
                     <button class="button number-btn" id="0">0</button>
-                    <button class="button" id="equal-btn">=</button>
+                    <button type="submit" class="button" id="equal-btn">=</button>
                 </div>
             </div>
         </div>
