Added decimal and percent button

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="row">
                     <button class="button" id="all-clear">AC</button>
                     <button class="button" id="delete-btn">C</button>
-                    <button class="button operator-btn" id="%">%</button>
+                    <button class="button percent-btn" id="%">%</button>
                     <button class="button operator-btn" id="/">&divide;</button>
                 </div>
                 <div class="row">
@@ -44,7 +44,7 @@
                     <button class="button operator-btn" id="*">&times;</button>
                 </div>
                 <div class="row">
-                    <button class="button" id=".">.</button>
+                    <button class="button decimal-btn" id=".">.</button>
                     <button class="button number-btn" id="0">0</button>
                     <button type="submit" class="button" id="equal-btn">=</button>
                 </div>
